Refactor RawScoreGeneScorer to require AcmgAssignmentCalculator Merge changes from PvalueGeneScorer into RawScoreGeneScorer Delete PvalueGeneScorer.java Update VariantDataService to extend ClinVarDao (a bit ikky, but there you go)